
snippet::io.micronaut.docs.config.itfce.EngineConfig[tags="imports,class",indent=0,title="@ConfigurationProperties Example"]

=== New Micronaut Cache Modules

https://micronaut-projects.github.io/micronaut-cache/1.0.x/guide/#introduction[Micronaut Cache] has been updated to support https://micronaut-projects.github.io/micronaut-cache/1.0.x/guide/#hazelcast[Hazelcast] and https://micronaut-projects.github.io/micronaut-cache/1.0.x/guide/#ehcache[Ehcache] as additional Cache providers.

=== New Micronaut Jackson XML Module

Support for parsing and serializing to XML has been added with a new https://github.com/micronaut-projects/micronaut-jackson-xml[Jackson XML module].

Thanks to https://github.com/svishnyakoff[Sergey] for this contribution.

=== Micronaut OpenAPI (Swagger) 1.3 Update

Micronaut OpenAPI has been updated with loads of improvements including the ability to https://micronaut-projects.github.io/micronaut-openapi/1.3.x/guide/index.html#openApiViews[automatically generate UIs for Swagger output] as part of your application. Thanks to https://github.com/croudet[croudet] for this contribution awesome contribution.

The module is also no longer regarded as experimental.

=== Micronaut Views 1.3 Update

Micronaut Views has been updated to and now features a new https://micronaut-projects.github.io/micronaut-views/1.3.x/guide/#soy[view renderer for Soy (Closure Templates)]. Thanks to https://github.com/sgammon[Sam Gammon] for this contribution.

=== Micronaut SQL 1.3 Update

Micronaut SQL includes the latest versions of Hibernate and adds support for the Vert.x MySQL and Postgres Clients. Thank you to https://github.com/shenzhou-6[shenzhou-6] for this contribution.

=== Micronaut Micrometer 1.3 Update

Micronaut Micrometer has been updated to support Micrometer 1.3.1.

=== Micronaut Kafka 1.3 Update

Micronaut Kafka 1.3 has been updated to support Kafka 2.3.1

=== Micronaut GRPC 1.1 Update
