@@ -24,6 +24,7 @@ package io.micronaut.management.endpoint.loggers;
  *
  * @author Matthew Moss
  * @since 1.0
+ * @deprecated Use {@link io.micronaut.logging.LogLevel} instead
  */
 @Deprecated
 public enum LogLevel {
